--- a/scrollablelayoutlib/build.gradle
+++ b/scrollablelayoutlib/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
     buildToolsVersion '21.1.1'
 
     defaultConfig {
-        applicationId "com.test.cp.myscrolllayout"
         minSdkVersion 10
         targetSdkVersion 21
         versionCode 1
@@ -21,8 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile 'com.android.support:support-v4:21.0.2'
-    compile project(':PagerSlidingTabStrip')
-    compile project(':scrollablelayoutlib')
+    compile 'com.android.support:appcompat-v7:22.2.0'
 }
