--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.2'
     compile project(':PagerSlidingTabStrip')
     compile project(':scrollablelayoutlib')
+    compile 'com.nineoldandroids:library:2.4.0'
 }
