--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ ANDROID_BUILD_TOOLS_VERSION=21.1.1
 ANDROID_BUILD_SDK_VERSION=21
 SAMPLE_VERSION_NAME="test_cp"
 SAMPLE_VERSION_CODE=1
+PROJ_ARTIFACTID=ScrollableLayout
